--- a/style.css
+++ b/style.css
@@ -45,3 +45,58 @@ p{
     justify-content: center;
     align-items: center;
 }
+@media screen and (max-width:1024px){
+    *{
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        outline: 0;
+    }
+    body{
+        background: black;
+    }
+    .parent{
+       border-radius: 30px;
+        margin: 0 auto;
+        margin-top: 70px;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
+        height: 400px;
+        width: 400px;
+        background:white;
+    }
+    
+    .one{
+     margin: 10px;
+        height: 150px;
+        width: 150px;
+        object-fit: cover;
+        border-radius: 50%;
+    }
+    p{
+        padding: 8px;
+        font-family: tahoma;
+        font-size: 30px;
+       
+    }
+    .soc{
+        margin: 10px;
+        display: flex;
+        justify-content: space-evenly;
+        font-size: 30px;
+    }
+    .two{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+}
+
+
+
+
+  
