--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  background: black;
+  background: url(../img/2.jpg) no-repeat;
 }
 
 .parent {
@@ -32,6 +32,8 @@ body {
   height: 500px;
   width: 500px;
   background: white;
+  -webkit-animation: bounceInUp 2.5s;
+          animation: bounceInUp 2.5s;
 }
 
 .one {
@@ -41,12 +43,21 @@ body {
   -o-object-fit: cover;
      object-fit: cover;
   border-radius: 50%;
+  -webkit-animation: bounceInUp 2.5s inherit;
+          animation: bounceInUp 2.5s inherit;
 }
 
-p {
+a:hover {
+  -webkit-animation: shakeY 5s;
+          animation: shakeY 5s;
+}
+
+.tree {
   padding: 8px;
   font-family: tahoma;
   font-size: 30px;
+  -webkit-animation: bounceInLeft 2.5s;
+          animation: bounceInLeft 2.5s;
 }
 
 .soc {
@@ -58,6 +69,8 @@ p {
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
   font-size: 30px;
+  -webkit-animation: bounceInUp 2.5s;
+          animation: bounceInUp 2.5s;
 }
 
 .two {
@@ -70,6 +83,20 @@ p {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  font-size: 30px;
+  font-size: tahoma;
+  -webkit-animation: bounceInRight 2.5s;
+          animation: bounceInRight 2.5s;
+}
+
+a {
+  -webkit-animation: rotateIn 3.5s;
+          animation: rotateIn 3.5s;
+}
+
+img:hover {
+  -webkit-animation: heartBeat 5s;
+          animation: heartBeat 5s;
 }
 
 @media screen and (max-width: 1024px) {
@@ -79,9 +106,6 @@ p {
     -webkit-box-sizing: border-box;
             box-sizing: border-box;
     outline: 0;
-  }
-  body {
-    background: black;
   }
   .parent {
     border-radius: 30px;
@@ -114,7 +138,7 @@ p {
        object-fit: cover;
     border-radius: 50%;
   }
-  p {
+  .tree {
     padding: 8px;
     font-family: tahoma;
     font-size: 30px;
@@ -139,6 +163,7 @@ p {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+    font-size: 30px;
   }
 }
 
@@ -149,9 +174,6 @@ p {
     -webkit-box-sizing: border-box;
             box-sizing: border-box;
     outline: 0;
-  }
-  body {
-    background: black;
   }
   .parent {
     border-radius: 30px;
@@ -184,7 +206,7 @@ p {
        object-fit: cover;
     border-radius: 50%;
   }
-  p {
+  .tree {
     padding: 6px;
     font-family: tahoma;
     font-size: 20px;
@@ -209,6 +231,7 @@ p {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+    font-size: 20px;
   }
 }
 /*# sourceMappingURL=style.css.map */
