--- a/css/style.scss
+++ b/css/style.scss
@@ -5,7 +5,7 @@
     outline: 0;
 }
 body{
-    background: black;
+    background:url(../img/2.jpg) no-repeat;
 }
 .parent{
    border-radius: 30px;
@@ -19,6 +19,7 @@ body{
     height: 500px;
     width: 500px;
     background:white;
+    animation: bounceInUp 2.5s;
 }
 
 .one{
@@ -27,11 +28,16 @@ body{
     width: 200px;
     object-fit: cover;
     border-radius: 50%;
+    animation: bounceInUp 2.5s inherit;
 }
-p{
+a:hover{
+    animation:shakeY 5s ;
+  }
+.tree{
     padding: 8px;
     font-family: tahoma;
     font-size: 30px;
+    animation: bounceInLeft 2.5s;
    
 }
 .soc{
@@ -39,12 +45,23 @@ p{
     display: flex;
     justify-content: space-evenly;
     font-size: 30px;
+    animation: bounceInUp 2.5s;
 }
 .two{
     display: flex;
     justify-content: center;
     align-items: center;
+    font-size: 30px;
+    font-size: tahoma;
+    animation: bounceInRight 2.5s;
 }
+a{
+    animation:rotateIn 3.5s ;
+}
+img:hover{
+    animation:heartBeat 5s ;
+}
+
 @media screen and (max-width:1024px){
     *{
         margin: 0;
@@ -52,9 +69,7 @@ p{
         box-sizing: border-box;
         outline: 0;
     }
-    body{
-        background: black;
-    }
+ 
     .parent{
        border-radius: 30px;
         margin: 0 auto;
@@ -76,7 +91,7 @@ p{
         object-fit: cover;
         border-radius: 50%;
     }
-    p{
+    .tree{
         padding: 8px;
         font-family: tahoma;
         font-size: 30px;
@@ -92,6 +107,7 @@ p{
         display: flex;
         justify-content: center;
         align-items: center;
+        font-size: 30px;
     }
 
 }
@@ -102,9 +118,7 @@ p{
         box-sizing: border-box;
         outline: 0;
     }
-    body{
-        background: black;
-    }
+
     .parent{
        border-radius: 30px;
         margin: 0 auto;
@@ -126,7 +140,7 @@ p{
         object-fit: cover;
         border-radius: 50%;
     }
-    p{
+    .tree{
         padding: 6px;
         font-family: tahoma;
         font-size: 20px;
@@ -142,6 +156,7 @@ p{
         display: flex;
         justify-content: center;
         align-items: center;
+        font-size: 20px;
     }
 
 }
